Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTI708NET.CS


        private static class BTI708_64
        {
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_ChClear", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_ChClear(Int32 channum, IntPtr handleval);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_ChConfig", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_ChConfig(UInt32 configval, Int32 channum, IntPtr handleval);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_ChGetCount", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI708_ChGetCount(ref Int32 rcvcount, ref Int32 xmtcount, IntPtr handleval);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_ChGetInfo", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI708_ChGetInfo(UInt16 infotype, Int32 channum, IntPtr handleval);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_ChIs708", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_ChIs708(Int32 channum, IntPtr handleval);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_ChIsRcv", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_ChIsRcv(Int32 channum, IntPtr handleval);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_ChIsXmt", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_ChIsXmt(Int32 channum, IntPtr handleval);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_ChPause", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI708_ChPause(Int32 channum, IntPtr handleval);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_ChPauseCheck", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_ChPauseCheck(Int32 channum, IntPtr handleval);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_ChResume", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI708_ChResume(Int32 channum, IntPtr handleval);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_ChStart", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_ChStart(Int32 channum, IntPtr handleval);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_ChStop", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_ChStop(Int32 channum, IntPtr handleval);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_ChSyncDefine", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_ChSyncDefine(Int32 enableflag, UInt16 syncmask, UInt16 pinpolarity, Int32 channum, IntPtr handleval);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_ChTriggerDefine", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_ChTriggerDefine(Int32 enableflag, UInt16 trigmask, UInt16 trigval, UInt16 pinpolarity, Int32 channum, IntPtr handleval);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_FieldGetAngle", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI708_FieldGetAngle(UInt16[] buf);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_FieldGetAngleFl", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Single BTI708_FieldGetAngleFl(UInt16[] buf);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_FieldGetControlAccept", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI708_FieldGetControlAccept(UInt16[] buf);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_FieldGetData", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI708_FieldGetData(Int32 binnum, UInt16[] buf);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_FieldGetDataAccept", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI708_FieldGetDataAccept(UInt16[] buf);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_FieldGetFaults", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI708_FieldGetFaults(UInt16[] buf);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_FieldGetGain", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_FieldGetGain(UInt16[] buf);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_FieldGetLabel", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI708_FieldGetLabel(UInt16[] buf);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_FieldGetMode", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI708_FieldGetMode(UInt16[] buf);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_FieldGetRange", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_FieldGetRange(UInt16[] buf);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_FieldGetTilt", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI708_FieldGetTilt(UInt16[] buf);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_FieldGetTiltFl", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Single BTI708_FieldGetTiltFl(UInt16[] buf);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_FieldPutAngle", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI708_FieldPutAngle(UInt16 value, ref UInt16 buf);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_FieldPutAngleFl", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Single BTI708_FieldPutAngleFl(Single angle, UInt16[] buf);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_FieldPutControlAccept", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI708_FieldPutControlAccept(UInt16 value, UInt16[] buf);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_FieldPutData", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI708_FieldPutData(UInt16 value, Int32 binnum, UInt16[] buf);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_FieldPutDataAccept", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI708_FieldPutDataAccept(UInt16 value, UInt16[] buf);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_FieldPutFaults", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI708_FieldPutFaults(UInt16 value, UInt16[] buf);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_FieldPutGain", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_FieldPutGain(Int32 gain, UInt16[] buf);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_FieldPutLabel", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI708_FieldPutLabel(UInt16 value, UInt16[] buf);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_FieldPutMode", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI708_FieldPutMode(UInt16 value, UInt16[] buf);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_FieldPutRange", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_FieldPutRange(Int32 range, UInt16[] buf);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_FieldPutTilt", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI708_FieldPutTilt(UInt16 value, UInt16[] buf);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_FieldPutTiltFl", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Single BTI708_FieldPutTiltFl(Single tilt, UInt16[] buf);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_MsgBlockRd", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_MsgBlockRd(ref MSGFIELDS708 msgfields, Int32 msgindex, Int32 channum, IntPtr handleval);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_MsgBlockWr", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_MsgBlockWr(ref MSGFIELDS708 msgfields, Int32 msgindex, Int32 channum, IntPtr handleval);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_MsgDataRd", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_MsgDataRd(UInt16[] buf, Int32 msgindex, Int32 channum, IntPtr handleval);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_MsgDataWr", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_MsgDataWr(UInt16[] buf, Int32 msgindex, Int32 channum, IntPtr handleval);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_MsgIsAccessed", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_MsgIsAccessed(Int32 msgindex, Int32 channum, IntPtr handleval);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_MsgSyncDefine", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_MsgSyncDefine(Int32 enableflag, UInt16 syncmask, UInt16 pinpolarity, Int32 msgindex, Int32 channum, IntPtr handleval);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_MsgTriggerDefine", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_MsgTriggerDefine(Int32 enableflag, UInt16 trigmask, UInt16 trigval, UInt16 pinpolarity, Int32 msgindex, Int32 channum, IntPtr handleval);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_MsgVarDataRd", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_MsgVarDataRd(UInt16[] buf, ref Int32 bitcount, Int32 msgindex, Int32 channum, IntPtr handleval);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_MsgVarDataWr", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_MsgVarDataWr(UInt16[] buf, Int32 bitcount, Int32 msgindex, Int32 channum, IntPtr handleval);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_ParamAmplitudeConfig", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_ParamAmplitudeConfig(UInt32 configval, UInt16 dacval, Int32 channum, IntPtr handleval);
